Migration to the dev. Move noImege.jpg file to uploads dir.

--- a/src/app/components/recent/recent.component.html
+++ b/src/app/components/recent/recent.component.html
@@ -1,44 +1,44 @@
-<div class="single_bottom_rightbar">
-  <h2>Recent Post</h2>
-  <ul class="small_catg popular_catg wow fadeInDown">
-    <li>
-      <div class="media wow fadeInDown"><a href="#" class="media-left">
-        <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-      </a>
-        <div class="media-body">
-          <h4 class="media-heading">
-            <a href="#">Duis condimentum nunc pretium lobortis </a>
-          </h4>
-          <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="media wow fadeInDown"><a href="#" class="media-left">
-        <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-      </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-            lobortis </a>
-          </h4>
-          <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-        </div>
-      </div>
-    </li>
-    <li>
-      <div class="media wow fadeInDown"><a href="#" class="media-left">
-        <img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">
-      </a>
-        <div class="media-body">
-          <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-            lobortis </a>
-          </h4>
-          <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas
-            imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>
-        </div>
-      </div>
-    </li>
-  </ul>
-</div>
+<!--<div class="single_bottom_rightbar">-->
+  <!--<h2>Recent Post</h2>-->
+  <!--<ul class="small_catg popular_catg wow fadeInDown">-->
+    <!--<li>-->
+      <!--<div class="media wow fadeInDown"><a href="#" class="media-left">-->
+        <!--<img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">-->
+      <!--</a>-->
+        <!--<div class="media-body">-->
+          <!--<h4 class="media-heading">-->
+            <!--<a href="#">Duis condimentum nunc pretium lobortis </a>-->
+          <!--</h4>-->
+          <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+            <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+      <!--<div class="media wow fadeInDown"><a href="#" class="media-left">-->
+        <!--<img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">-->
+      <!--</a>-->
+        <!--<div class="media-body">-->
+          <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium-->
+            <!--lobortis </a>-->
+          <!--</h4>-->
+          <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+            <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</li>-->
+    <!--<li>-->
+      <!--<div class="media wow fadeInDown"><a href="#" class="media-left">-->
+        <!--<img alt="" src="{{DEPLOY_PATH}}assets/images/NoImage.jpg">-->
+      <!--</a>-->
+        <!--<div class="media-body">-->
+          <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium-->
+            <!--lobortis </a>-->
+          <!--</h4>-->
+          <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus, egestas-->
+            <!--imperdiet nulla nisl quis mauris. Suspendisse a pharetra </p>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</li>-->
+  <!--</ul>-->
+<!--</div>-->
