--- a/src/app/components/recommended/recommended.component.html
+++ b/src/app/components/recommended/recommended.component.html
@@ -22,45 +22,45 @@
                 </li>
             </ul>
         </div>
-        <div id="recentComent" class="tab-pane fade" role="tabpanel">
-            <ul class="small_catg popular_catg">
-                <li>
-                    <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                            src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                        <div class="media-body">
-                            <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                lobortis </a></h4>
-                            <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                pharetra </p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                            src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                        <div class="media-body">
-                            <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                lobortis </a></h4>
-                            <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                pharetra </p>
-                        </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="media wow fadeInDown"><a class="media-left" href="#"><img
-                            src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>
-                        <div class="media-body">
-                            <h4 class="media-heading"><a href="#">Duis condimentum nunc pretium
-                                lobortis </a></h4>
-                            <p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,
-                                egestas imperdiet nulla nisl quis mauris. Suspendisse a
-                                pharetra </p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
+        <!--<div id="recentComent" class="tab-pane fade" role="tabpanel">-->
+            <!--<ul class="small_catg popular_catg">-->
+                <!--<li>-->
+                    <!--<div class="media wow fadeInDown"><a class="media-left" href="#"><img-->
+                            <!--src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>-->
+                        <!--<div class="media-body">-->
+                            <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium-->
+                                <!--lobortis </a></h4>-->
+                            <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,-->
+                                <!--egestas imperdiet nulla nisl quis mauris. Suspendisse a-->
+                                <!--pharetra </p>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<div class="media wow fadeInDown"><a class="media-left" href="#"><img-->
+                            <!--src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>-->
+                        <!--<div class="media-body">-->
+                            <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium-->
+                                <!--lobortis </a></h4>-->
+                            <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,-->
+                                <!--egestas imperdiet nulla nisl quis mauris. Suspendisse a-->
+                                <!--pharetra </p>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+                <!--<li>-->
+                    <!--<div class="media wow fadeInDown"><a class="media-left" href="#"><img-->
+                            <!--src="{{DEPLOY_PATH}}assets/images/NoImage.jpg" alt=""></a>-->
+                        <!--<div class="media-body">-->
+                            <!--<h4 class="media-heading"><a href="#">Duis condimentum nunc pretium-->
+                                <!--lobortis </a></h4>-->
+                            <!--<p>Nunc tincidunt, elit non cursus euismod, lacus augue ornare metus,-->
+                                <!--egestas imperdiet nulla nisl quis mauris. Suspendisse a-->
+                                <!--pharetra </p>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</li>-->
+            <!--</ul>-->
+        <!--</div>-->
     </div>
 </div>
