1 fixed comments count output and minor fixes

--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -64,7 +64,7 @@
                     <!--<a (click)="share.pinterest()" class="pinterest"><i class="fa fa-pinterest"></i>Pinterest</a>-->
                 <!--</div>-->
                 <app-social-share></app-social-share>
-                <disqus [shortname]="'pb4life'" [identifier]="slug" [url]="_host + '/' + slug"></disqus>
+                <disqus [identifier]="slug" [url]="_host + slug"></disqus>
                 <!-- Put this div tag to the place, where the Comments block will be -->
                 <!--<vkcomments></vkcomments>-->
 
