--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -66,8 +66,9 @@
                                             <div class="comments_box">
                                             <span
                                                     class="meta_date">{{post.date_gmt}}</span> <span
-                                                    class="meta_comment"><a [ngClass]="'vk_count_'+post.id"
-                                                                            [routerLink]="post.slug + '#disqus_thread'">Нет коментариев</a></span>
+                                                    class="meta_comment">
+                                                <a class="disqus-comment-count" [attr.data-disqus-identifier]="post.slug" [routerLink]="post.slug" fragment="disqus_thread">0 Comments</a>
+                                            </span>
                                                 <span
                                                         class="meta_more">
                                             <a [routerLink]="post.slug">Read More...</a></span></div>
@@ -89,7 +90,8 @@
                                                     <div class="comments_box"><span
                                                             class="meta_date">{{post.date_gmt}}</span>
                                                         <span class="meta_comment">
-                                                        <a class="disqus-comment-count" data-disqus-identifier="kiev-express" [routerLink]="post.slug + '&' + '#disqus_thread'">Нет коментариев</a></span>
+                                                        <a class="disqus-comment-count" [attr.data-disqus-identifier]="post.slug" [routerLink]="post.slug" fragment="disqus_thread">0 Comments</a>
+                                                        </span>
                                                     </div>
                                                 </div>
                                             </div>
