#3 fixed footer align, fixed about us page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div class="wrapper-align">
+    <div class="wrapper-header">
+        <app-header></app-header>
+    </div>
+    <div class="wrapper-content">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="wrapper-footer">
+        <app-footer></app-footer>
+    </div>
+</div>
