--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,3 +1,13 @@
-<p>
-  contact works!
-</p>
+<div class="container">
+    <section id="mainContent">
+        <div class="content_bottom container">
+            <div class="row">
+                <div class="col-lg-8 col-md-8">
+                    <p>
+                        Email for contacts with us: <a href="mailto:info@pb4life.in.ua">info@pb4life.in.ua</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
